New font face and colors for words and definitions

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="20sp"
         android:layout_marginRight="20sp"
         android:gravity="center"
-        android:textAppearance="@style/Title"
+        android:textAppearance="@style/Word"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,7 +39,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textAppearance="@style/MenuItem"
+            android:textAppearance="@style/Definition"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
