--- a/app/src/main/res/layout/activity_dbedit.xml
+++ b/app/src/main/res/layout/activity_dbedit.xml
@@ -27,6 +27,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/tiet1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Word" />
@@ -49,6 +50,7 @@
             app:layout_constraintVertical_bias="0.0">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/tiet2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Type" />
@@ -69,6 +71,7 @@
             app:layout_constraintVertical_bias="0.0">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/tiet3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Short Meaning" />
@@ -89,6 +92,7 @@
             app:layout_constraintVertical_bias="0.0">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/tiet4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Synonyms" />
