--- a/app/src/main/res/layout/activity_dbedit.xml
+++ b/app/src/main/res/layout/activity_dbedit.xml
@@ -98,6 +98,26 @@
                 android:hint="Synonyms" />
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/addWordButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til4">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/tiet5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Example" />
+        </android.support.design.widget.TextInputLayout>
+
         <Button
             android:id="@+id/addWordButton"
             style="@style/ButtonMaterial"
@@ -109,7 +129,7 @@
             android:text="Add Word"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til4" />
+            app:layout_constraintTop_toBottomOf="@+id/til5" />
     </android.support.constraint.ConstraintLayout>
 
 </ScrollView>
