--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,24 +30,18 @@
         app:layout_constraintStart_toStartOf="@+id/Title"
         app:layout_constraintTop_toBottomOf="@+id/Title" />
 
-    <android.support.design.widget.FloatingActionButton
-		style="@style/Widget.MaterialComponents.FloatingActionButton"
-		android:id="@+id/fab"
-        android:focusable="auto"
-		android:layout_width="wrap_content"
+	<Button
+		style="@style/ButtonMaterial"
+		android:id="@+id/choice2"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="16dp"
-		android:layout_marginEnd="16dp"
-		android:clickable="true"
-		android:tint="#FFFFFF"
-		app:backgroundTint="@color/colorAccent"
-		app:fabSize="normal"
+		android:layout_marginBottom="8dp"
+		android:layout_marginTop="8dp"
+		android:text="@string/menu_choice2"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="1.0"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintVertical_bias="1.0"
-		app:srcCompat="@android:drawable/ic_input_add" />
+		app:layout_constraintEnd_toEndOf="@+id/Title"
+		app:layout_constraintStart_toStartOf="@+id/Title"
+		app:layout_constraintTop_toBottomOf="@+id/choice1"
+		app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
