Feature Added: CheckBox interface for randomizing words(see d62c684)

--- a/app/src/main/res/menu/menu_game.xml
+++ b/app/src/main/res/menu/menu_game.xml
@@ -5,4 +5,10 @@
     <item
         android:id="@+id/menu_game_search"
         android:title="@string/menu_game_search" />
+
+    <item
+        android:id="@+id/menu_game_shuffle"
+        android:title="@string/menu_game_shuffle"
+        android:checkable="true"
+        app:actionViewClass="android.widget.CheckBox" />
 </menu>
