--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:enabled="true"
         android:title="Add"
-        android:icon="@android:drawable/ic_menu_add" />
+        android:icon="@android:drawable/ic_menu_add"
+        app:showAsAction="ifRoom" />
 
     <item
         android:enabled="true"
         android:title="Update"
-        android:icon="@android:drawable/ic_menu_edit" />
+        android:icon="@android:drawable/ic_menu_edit"
+        app:showAsAction="ifRoom" />
 
     <item
         android:enabled="true"
         android:title="Delete"
-        android:icon="@android:drawable/ic_menu_delete" />
+        android:icon="@android:drawable/ic_menu_delete"
+        app:showAsAction="ifRoom" />
 
 </menu>
