Add Word Activity(DBEditActivity) is now a Fragment

--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/addWord"
         android:enabled="true"
         android:title="Add"
         android:icon="@android:drawable/ic_menu_add"
