--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -10,6 +10,7 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/updateWord"
         android:enabled="true"
         android:title="Update"
         android:icon="@android:drawable/ic_menu_edit"
