--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".AddWordFragment">
+    tools:context=".databaseui.AddWordFragment">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til1"
