--- a/app/src/main/res/layout/fragment_update_word.xml
+++ b/app/src/main/res/layout/fragment_update_word.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateWordFragment">
+    tools:context=".databaseui.UpdateWordFragment">
 
     <Button
         android:id="@+id/autoFill"
