--- a/app/src/main/res/layout/fragment_update_word.xml
+++ b/app/src/main/res/layout/fragment_update_word.xml
@@ -8,7 +8,7 @@
 
     <Spinner
         android:id="@+id/wordSpinner"
-        style="@style/Widget.AppCompat.Spinner.Underlined"
+        style="@style/Widget.AppCompat.Spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
