Update Word implemented

--- a/app/src/main/res/layout/fragment_update_word.xml
+++ b/app/src/main/res/layout/fragment_update_word.xml
@@ -42,8 +42,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/uTil2"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/uTiet2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -56,29 +55,28 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/uTil2"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="120dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="16dp"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:text="Type"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/uTiet2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/uTiet2"
+            app:layout_constraintTop_toTopOf="@+id/uTil1" />
+
+        <Spinner
+            android:id="@+id/uTiet2"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/uTil1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/uTil1"
-            app:layout_constraintVertical_bias="0.0">
-
-            <AutoCompleteTextView
-                android:id="@+id/uTiet2"
-                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:hint="Type" />
-
-        </android.support.design.widget.TextInputLayout>
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/uTil3"
@@ -92,7 +90,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/uTil2"
+            app:layout_constraintTop_toBottomOf="@id/uTil1"
             app:layout_constraintVertical_bias="0.0">
 
             <android.support.design.widget.TextInputEditText
@@ -153,7 +151,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <Button
-            android:id="@+id/addWordButton"
+            android:id="@+id/updateWordButton"
             style="@style/ButtonMaterial"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
