--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -14,8 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/til2"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@id/tiet2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -28,29 +27,30 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til2"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="120dp"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Type"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@id/tiet2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tiet2"
+        app:layout_constraintTop_toTopOf="@id/til1" />
+
+    <Spinner
+        android:id="@+id/tiet2"
+        style="@style/Widget.AppCompat.Spinner.DropDown"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/til1"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/til1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/til1"
-        app:layout_constraintVertical_bias="0.0">
-
-        <AutoCompleteTextView
-            android:id="@+id/tiet2"
-            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:hint="Type" />
-
-    </android.support.design.widget.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@id/textView" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til3"
@@ -64,7 +64,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til2"
+        app:layout_constraintTop_toBottomOf="@id/til1"
         app:layout_constraintVertical_bias="0.0">
 
         <android.support.design.widget.TextInputEditText
