Make definition text bold + remove markdown rendering

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,7 @@
         <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/amaranth</item>
         <item name="android:fontFamily">monospace</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
 </resources>
